# SuperTinyIcons

./: .gitattributes  .gitignore  .imagebotconfig  .imgbotconfig  .metadata  3D Spiral  CHECK-local.html  CHECK.html  CHECK.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  LICENSE  README.md  REFERENCE.md  check.py  config.json  generate_readme_table.py  index.html  javascript.js  package-lock.json  package.json  pubspec.yaml  pyproject.toml  radius.html  table.txt  update_readme.py
.github/: FUNDING.yml  dependabot.yml  generate_readme.py  pull_request_template.md
.github/ISSUE_TEMPLATE/: logo-request.md  logo-update.md
.github/workflows/: gh-pages.yml  page.yml  test.yml
android-vector-drawable/: amilia.xml  apple.xml  bitbucket.xml  docker.xml  facebook.xml  google.xml  hackernews.xml  html5.xml  instagram.xml  line.xml  linkedin.xml  lock.xml  log.html  mastodon.xml  npm.xml  paypal.xml  phone.xml  reddit.xml  rss.xml  snapchat.xml  soundcloud.xml  spotify.xml  telegram.xml  tox.xml  tumblr.xml  twitter.xml  ubuntu.xml  wordpress.xml  youtube.xml  yubico.xml
guidelines/: Instructions.md
images/android-vector-drawable/: 1password.xml  _password.xml  acast.xml  access.xml  activitypub.xml  adobe.xml  airbnb.xml  alpinelinux.xml  amazon-s3.xml  amazon.xml  amazon_alexa.xml  amazon_s3.xml  amberframework.xml  andotp.xml  android.xml  angellist.xml  angular.xml  ansible.xml  apache_age.xml  apereo.xml  apple.xml  apple_music.xml  applepodcasts.xml  (+457 more)
lib/: supertinyicons.dart
test/: .test.js  test.js
tiniest/: svgo.yml
tiny/: minimise.py  svgo.yml
(+498 files in other folders)
